feat: Add Vite proxy test tool

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
+    "test-proxy": "node test-proxy.js"
   },
   "keywords": [
     "gratitude",
