--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "test-proxy": "node test-proxy.js"
+    "test-app": "node test-app.js"
   },
   "keywords": [
     "gratitude",
