feat: Add OpenRouter API integration tests
Implements comprehensive API testing functionality:
- Add client-side API test utility
- Create server-side test endpoints
- Implement API test UI component
- Update test navigation and documentation
- Enhance test runner with API test instructions

Tests verify API connection, key validation, fallback mechanisms,
and input processing for different types of user input.

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,13 +3,13 @@ PORT=5000
 NODE_ENV=development
 
 # OpenRouter API key
-# Get your API key from https://openrouter.ai/
+# Get your API key from https://openrouter.ai/keys
+# The key should start with 'sk-or-' and have no spaces or quotes
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # SSL Certificate verification
 # WARNING: Setting this to 0 disables SSL certificate verification and should NOT be used in production
-# NODE_TLS_REJECT_UNAUTHORIZED=0
+NODE_TLS_REJECT_UNAUTHORIZED=1
 
 # Database configuration
 # No additional configuration needed for SQLite
-# The database file will be created at server/db/data/gratitude.db
