feat: We centralized the LLM model configuration by:
- Adding a LLM_MODEL environment variable to the .env file
- Adding the same variable to the .env.example file with documentation
- Updating the llmService.js file to use the model from the environment variable
- Updating the testController.js file to use the model from the environment variable

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,6 +7,14 @@ NODE_ENV=development
 # The key should start with 'sk-or-' and have no spaces or quotes
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# LLM Model Configuration
+# Available free models: 
+# - google/gemini-2.0-flash-exp:free (good general purpose)
+# - google/gemma-3n-e4b-it:free (good for instruction following)
+# - deepseek/deepseek-r1-0528-qwen3-8b:free (good for structured output)
+# - anthropic/claude-3-haiku-20240307:free (good for creative content)
+LLM_MODEL=google/gemini-2.0-flash-exp:free
+
 # SSL Certificate verification
 # WARNING: Setting this to 0 disables SSL certificate verification and should NOT be used in production
 NODE_TLS_REJECT_UNAUTHORIZED=1
